Fixed breadcrumbs alignment (esp. in FF)
Ticket: none

--- a/pub/System/FlatSkinPlugin/src/scss/qwiki/_breadcrumbs.scss
+++ b/pub/System/FlatSkinPlugin/src/scss/qwiki/_breadcrumbs.scss
@@ -1,7 +1,5 @@
 ul.qw-breadcrumb {
   list-style: none;
-  // margin-top: $qw-breadcrumb-offset-top;
-  max-height: $qw-breadcrumb-height;
   white-space: nowrap;
   padding-left: 0;
 
@@ -11,9 +9,7 @@ ul.qw-breadcrumb {
   > li {
     float: left;
     margin-left: $qw-breadcrumb-spacing;
-
-background: green !important;
-height: 40px !important;
+    max-height: $qw-breadcrumb-height;
 
     &:first-child {
       border-left: none;
@@ -22,9 +18,7 @@ height: 40px !important;
       a {
         border-top-left-radius: $qw-breadcrumb-radius;
         border-bottom-left-radius: $qw-breadcrumb-radius;
-
         font-size: 1rem;
-        padding: 11px 5px 11px 15px !important;
       }
     }
 
@@ -36,6 +30,7 @@ height: 40px !important;
         border-top-right-radius: $qw-breadcrumb-radius;
         border-bottom-right-radius: $qw-breadcrumb-radius;
         background: transparent;
+        line-height: 1rem;
 
         &:after {
           border-left: none;
@@ -54,7 +49,7 @@ height: 40px !important;
       font-family: $body-font-family;
       background: $qw-breadcrumb-bg;
       text-decoration: none;
-      padding: 12.5px 10px 13px 25px;
+      padding: rem-calc(12 10 12 25);
       position: relative;
       display: inline-block;
 
@@ -151,7 +146,7 @@ height: 40px !important;
 
   > li.qw-breadcrumb-home > a {
     font-size: 2rem;
-    line-height: 1;
-    padding: rem-calc(2 5 3 15) !important;
+    line-height: 1rem;
+    padding: rem-calc( 4 5 4 15 ) !important;
   }
 }
